--- a/components/nilan/light.yaml
+++ b/components/nilan/light.yaml
@@ -167,31 +167,31 @@ sensor:
     register_type: read
     address: 409
     
-  - platform: modbus_controller
-    modbus_controller_id: nilan_modbus_controller
-    name: "Actual fan step"
-    id: nilan_actual_fan_step
-    accuracy_decimals: 0
-    register_type: read
-    address: 1100    
+  #- platform: modbus_controller
+  #  modbus_controller_id: nilan_modbus_controller
+  #  name: "Actual fan step"
+  #  id: nilan_actual_fan_step
+  #  accuracy_decimals: 0
+  #  register_type: read
+  #  address: 1100    
 
-  - platform: modbus_controller
-    modbus_controller_id: nilan_modbus_controller
-    name: "Days since last filter change alarm"
-    id: nilan_days_since_last_filter_alarm
-    unit_of_measurement: 'days'
-    accuracy_decimals: 0
-    register_type: read
-    address: 1103
+  #- platform: modbus_controller
+  #  modbus_controller_id: nilan_modbus_controller
+  #  name: "Days since last filter change alarm"
+  #  id: nilan_days_since_last_filter_alarm
+  #  unit_of_measurement: 'days'
+  #  accuracy_decimals: 0
+  #  register_type: read
+  #  address: 1103
 
-  - platform: modbus_controller
-    modbus_controller_id: nilan_modbus_controller
-    name: "Days to next filter change alarm"
-    id: nilan_days_to_next_filter_alarm
-    unit_of_measurement: 'days'
-    accuracy_decimals: 0
-    register_type: read
-    address: 1104    
+  #- platform: modbus_controller
+  #  modbus_controller_id: nilan_modbus_controller
+  #  name: "Days to next filter change alarm"
+  #  id: nilan_days_to_next_filter_alarm
+  #  unit_of_measurement: 'days'
+  #  accuracy_decimals: 0
+  #  register_type: read
+  #  address: 1104    
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
