Moved some more sensors to basic.yaml. Now it has all sensors required by the nice lovelace card by MSkeem (https://github.com/MSkeem/nilan)

--- a/components/nilan/basic.yaml
+++ b/components/nilan/basic.yaml
@@ -33,6 +33,35 @@ select:
       - "Auto"
 
 sensor:
+#########################
+#### INPUT REGISTERS ####
+#########################
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Exhaust temperature"
+    id: nilan_exhaust_temp_t3
+    unit_of_measurement: °C
+    accuracy_decimals: 1
+    device_class: temperature
+    value_type: S_WORD
+    register_type: read
+    address: 203
+    filters:
+      - multiply: 0.01
+      
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Outlet temperature"
+    id: nilan_outlet_temp_t4
+    unit_of_measurement: °C
+    accuracy_decimals: 1
+    device_class: temperature
+    value_type: S_WORD
+    register_type: read
+    address: 204
+    filters:
+      - multiply: 0.01
+
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
     name: "Inlet (after heater) temperature"
@@ -42,6 +71,63 @@ sensor:
     device_class: temperature
     register_type: read
     address: 207
+    filters:
+      - multiply: 0.01
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Outdoor temperature"
+    id: nilan_outdoor_temp_t8
+    unit_of_measurement: °C
+    accuracy_decimals: 1
+    device_class: temperature
+    value_type: S_WORD
+    register_type: read
+    address: 208
+    filters:
+      - multiply: 0.01
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Humidity"
+    id: nilan_humidity
+    unit_of_measurement: '%'
+    accuracy_decimals: 1
+    device_class: humidity
+    register_type: read
+    address: 221
+    filters:
+      - multiply: 0.01
+    on_value: 
+      - lambda: !lambda |-
+          id(aqi_humidity).publish_state( (x < 35) ? "Too Dry" : 
+                                          (x < 65) ? "Perfect" : 
+                                          "Too Humid");
+
+###########################
+#### HOLDING REGISTERS ####
+###########################
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Exhaust fan speed"
+    id: nilan_exhaust_fan_speed
+    unit_of_measurement: '%'
+    icon: "mdi:percent"
+    accuracy_decimals: 0
+    register_type: holding
+    address: 200
+    filters:
+      - multiply: 0.01
+  
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Inlet fan speed"
+    id: nilan_inlet_fan_speed
+    unit_of_measurement: '%'
+    icon: "mdi:percent"
+    accuracy_decimals: 0
+    register_type: holding
+    address: 201
     filters:
       - multiply: 0.01
 
@@ -71,6 +157,11 @@ number:
     lambda: "return x*0.01;"
 
 text_sensor:
+  - platform: template
+    name: "Air Quality Index Humidity (AQI)"
+    id: aqi_humidity
+    icon: mdi:water-percent 
+
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
     name: "Operation mode"
@@ -87,6 +178,38 @@ text_sensor:
         case 2: mode_str = "Cool"; break;
         case 3: mode_str = "Auto"; break;
         case 4: mode_str = "Service"; break;
+        default: mode_str = "Unknown"; break;
+      }
+      return mode_str;
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Control mode"
+    id: nilan_control_state
+    register_type: read
+    address: 1002
+    lambda: !lambda |-
+      uint16_t int_mode = (data[item->offset] << 8) + data[item->offset+1];
+      ESP_LOGD("main","Parsed operation mode int : %d", int_mode);
+      std::string mode_str;
+      switch (int_mode) {
+        case 0:  mode_str = "Off"; break;
+        case 1:  mode_str = "Shift"; break;
+        case 2:  mode_str = "Stop"; break;
+        case 3:  mode_str = "Start"; break;
+        case 4:  mode_str = "Standby"; break;
+        case 5:  mode_str = "Ventilation stop"; break;
+        case 6:  mode_str = "Ventilation"; break;
+        case 7:  mode_str = "Heating"; break;
+        case 8:  mode_str = "Cooling"; break;
+        case 9:  mode_str = "Hot water"; break;
+        case 10: mode_str = "Legionella"; break;
+        case 11: mode_str = "Cooling + hot water"; break;
+        case 12: mode_str = "Central heating"; break;
+        case 13: mode_str = "Defrost"; break;
+        case 14: mode_str = "Frost secure"; break;
+        case 15: mode_str = "Service"; break;
+        case 16: mode_str = "Alarm"; break;
         default: mode_str = "Unknown"; break;
       }
       return mode_str;
