--- a/components/nilan/comfort.yaml
+++ b/components/nilan/comfort.yaml
@@ -188,8 +188,7 @@ number:
     address: 1700
     force_new_range: true
     use_write_multiple: true
-    write_lambda: "payload = modbus_controller::float_to_payload(x*100, modbus_controller::SensorValueType::U_WORD); return x;"
-    lambda: "return x*0.01;"
+    multiply: 100
   
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
@@ -201,5 +200,4 @@ number:
     address: 1701
     force_new_range: true
     use_write_multiple: true
-    write_lambda: "payload = modbus_controller::float_to_payload(x*100, modbus_controller::SensorValueType::U_WORD); return x;"
-    lambda: "return x*0.01;"
+    multiply: 100
