--- a/components/nilan/comfort.yaml
+++ b/components/nilan/comfort.yaml
@@ -1,7 +1,7 @@
 packages:
   remote_package:
     url: https://github.com/Jopand/esphome_components
-    ref: develop
+    ref: 2022_5_0-fixes
     files: [components/nilan/all.yaml]
     refresh: 0s
 
