--- a/components/nilan/basic.yaml
+++ b/components/nilan/basic.yaml
@@ -224,3 +224,18 @@ climate:
     target_temp_sensor_id: nilan_target_temperature_set
     fan_speed_sensor_id: nilan_ventilation_speed_set
     mode_select_id: nilan_set_operation_mode
+
+output:
+  - platform: modbus_controller
+    id: nilan_reset_alarm
+    address: 400
+    use_write_multiple: true
+    value_type: U_WORD
+    write_lambda: return 255;
+    
+button:
+  - platform: output
+    name: Reset alarm
+    id: nilan_reset_alarm_button
+    output: nilan_reset_alarm
+    duration: 5s
