--- a/components/nilan/basic.yaml
+++ b/components/nilan/basic.yaml
@@ -1,5 +1,5 @@
 external_components:
-  - source: github://Jopand/esphome_components@main
+  - source: github://Jopand/esphome_components@develop
     refresh: 0s
 
 nilan:
