--- a/components/nilan/full.yaml
+++ b/components/nilan/full.yaml
@@ -24,7 +24,7 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "Inlet (before heater) temperature"
+    name: "Inlet  temperature"
     id: nilan_inlet_temp_t2
     unit_of_measurement: °C
     accuracy_decimals: 1
@@ -58,19 +58,6 @@ sensor:
     value_type: S_WORD
     register_type: read
     address: 206
-    filters:
-      - multiply: 0.01
-
-  - platform: modbus_controller
-    modbus_controller_id: nilan_modbus_controller
-    name: "Heating surface temperature"
-    id: nilan_heater_temp_t9
-    unit_of_measurement: °C
-    accuracy_decimals: 1
-    device_class: temperature
-    value_type: S_WORD
-    register_type: read
-    address: 209
     filters:
       - multiply: 0.01
 
@@ -126,45 +113,7 @@ sensor:
     filters:
       - multiply: 0.01
 
-  - platform: modbus_controller
-    modbus_controller_id: nilan_modbus_controller
-    name: "AUX temperature"
-    id: nilan_aux_temp_t16
-    unit_of_measurement: °C
-    accuracy_decimals: 1
-    device_class: temperature
-    value_type: S_WORD
-    register_type: read
-    address: 216
-    filters:
-      - multiply: 0.01
-
-  - platform: modbus_controller
-    modbus_controller_id: nilan_modbus_controller
-    name: "Preheater temperature"
-    id: nilan_preheat_temp_t17
-    unit_of_measurement: °C
-    accuracy_decimals: 1
-    device_class: temperature
-    value_type: S_WORD
-    register_type: read
-    address: 217
-    filters:
-      - multiply: 0.01
-
-  - platform: modbus_controller
-    modbus_controller_id: nilan_modbus_controller
-    name: "Pressure pibe temperature"
-    id: nilan_prepibe_temp_t18
-    unit_of_measurement: °C
-    accuracy_decimals: 1
-    device_class: temperature
-    value_type: S_WORD
-    register_type: read
-    address: 218
-    filters:
-      - multiply: 0.01
-
+  
 # NOT WORKING ON COMFORT MODEL
 #  - platform: modbus_controller
 #    modbus_controller_id: nilan_modbus_controller
