--- a/components/nilan/all.yaml
+++ b/components/nilan/all.yaml
@@ -1,6 +1,6 @@
 packages:
   remote_package:
-    url: https://github.com/Jopand/esphome_components
+    url: https://github.com/dyrvigk/nilan
     ref: main
     files: [components/nilan/basic.yaml]
     refresh: 0s
