--- a/components/nilan/full.yaml
+++ b/components/nilan/full.yaml
@@ -24,7 +24,7 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "Inlet  temperature"
+    name: "Inlet (before heater) temperature"
     id: nilan_inlet_temp_t2
     unit_of_measurement: °C
     accuracy_decimals: 1
