--- a/components/nilan/full.yaml
+++ b/components/nilan/full.yaml
@@ -169,7 +169,7 @@ sensor:
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
     name: "Actual inlet fan step"
-    unit_of_measurement:
+    unit_of_measurement: 'days'
     id: nilan_actual_inlet_fan_step
     accuracy_decimals: 0
     register_type: read
