--- a/components/nilan/all.yaml
+++ b/components/nilan/all.yaml
@@ -278,6 +278,17 @@ sensor:
     filters:
       - multiply: 0.01
 
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Output.CprCap"
+    id: nilan_compressor_capasity
+    unit_of_measurement: '%'
+    accuracy_decimals: 0
+    register_type: holding
+    address: 204
+    filters:
+      - multiply: 0.01
+
 number:
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
