--- a/components/nilan/full.yaml
+++ b/components/nilan/full.yaml
@@ -113,6 +113,83 @@ sensor:
     filters:
       - multiply: 0.01
 
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Before kondensator"
+    id: nilan_before_kondensator_temp_t16
+    unit_of_measurement: °C
+    accuracy_decimals: 1
+    device_class: temperature
+    value_type: S_WORD
+    register_type: read
+    address: 216
+    filters:
+      - multiply: 0.01
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "After Kondensator"
+    id: nilan_after_kondensator_temp_t17
+    unit_of_measurement: °C
+    accuracy_decimals: 1
+    device_class: temperature
+    value_type: S_WORD
+    register_type: read
+    address: 217
+    filters:
+      - multiply: 0.01   
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Buffertank Temp"
+    id: nilan_buffertank_temp_t18
+    unit_of_measurement: °C
+    accuracy_decimals: 1
+    device_class: temperature
+    value_type: S_WORD
+    register_type: read
+    address: 218
+    filters:
+      - multiply: 0.01    
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Outdoor Temp"
+    id: nilan_outdoor_temp_t20
+    unit_of_measurement: °C
+    accuracy_decimals: 1
+    device_class: temperature
+    value_type: S_WORD
+    register_type: read
+    address: 220
+    filters:
+      - multiply: 0.01   
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Fordampertemperatur"
+    id: nilan_fordampertemperatur_temp_t23
+    unit_of_measurement: °C
+    accuracy_decimals: 1
+    device_class: temperature
+    value_type: S_WORD
+    register_type: read
+    address: 223
+    filters:
+      - multiply: 0.01
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Pressure pipe temperature"
+    id: nilan_pressure_pipe_temp_t35
+    unit_of_measurement: °C
+    accuracy_decimals: 1
+    device_class: temperature
+    value_type: S_WORD
+    register_type: read
+    address: 235
+    filters:
+      - multiply: 0.01   
   
 # NOT WORKING ON COMFORT MODEL
 #  - platform: modbus_controller
