--- a/components/nilan/basic.yaml
+++ b/components/nilan/basic.yaml
@@ -144,6 +144,13 @@ text_sensor:
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
+    name: "Control mode number"
+    id: nilan_control_state_number
+    register_type: read
+    address: 1002  
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
     name: "Operation mode"
     id: nilan_operation_mode
     register_type: read
