--- a/components/nilan/basic.yaml
+++ b/components/nilan/basic.yaml
@@ -62,13 +62,13 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "Inlet (after heater) temperature"
+    name: "T7"
     id: nilan_inlet_temp_t7
     unit_of_measurement: °C
     accuracy_decimals: 1
     device_class: temperature
     register_type: read
-    address: 202
+    address: 207
     filters:
       - multiply: 0.01
 
