--- a/components/nilan/all.yaml
+++ b/components/nilan/all.yaml
@@ -92,7 +92,7 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "External room temperature"
+    name: "External room T10 temperature"
     id: nilan_extern_temp_t10
     unit_of_measurement: °C
     accuracy_decimals: 1
