--- a/components/nilan/all.yaml
+++ b/components/nilan/all.yaml
@@ -280,12 +280,12 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "Output.CprCap"
+    name: "Output.CenHeatCap"
     id: nilan_compressor_capasity
     unit_of_measurement: '%'
     accuracy_decimals: 0
     register_type: holding
-    address: 204
+    address: 203
     filters:
       - multiply: 0.01
 
