--- a/components/nilan/air9.yaml
+++ b/components/nilan/air9.yaml
@@ -128,145 +128,85 @@ sensor:
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "T16"
-    id: nilan_before_kondensator_temp_t16
+    name: "HeatPump Return T16"
+    id: nilan_heatpump_return_temp_t16
     unit_of_measurement: °C
     accuracy_decimals: 1
     device_class: temperature
     value_type: S_WORD
     register_type: read
-    address: 216
+    address: 1901
     filters:
       - multiply: 0.01
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "T0"
-    id: nilan_after_kondensator_temp_t17
+    name: "HeatPump Supply T17"
+    id: nilan_heatpump_supply_temp_t17
     unit_of_measurement: °C
     accuracy_decimals: 1
     device_class: temperature
     value_type: S_WORD
     register_type: read
-    address: 200
+    address: 1900
     filters:
       - multiply: 0.01   
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "T3"
-    id: nilan_buffertank_temp_t18
+    name: "HeatPump Ambient T20"
+    id: nilan_heatpump_ambient_temp_t20
     unit_of_measurement: °C
     accuracy_decimals: 1
     device_class: temperature
     value_type: S_WORD
     register_type: read
-    address: 203
+    address: 21903
     filters:
       - multiply: 0.01    
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "T20"
-    id: nilan_outdoor_temp_t20
+    name: "HeatPump BufferTank T18"
+    id: nilan_heatpump_buffertank_temp_t18
     unit_of_measurement: °C
     accuracy_decimals: 1
     device_class: temperature
     value_type: S_WORD
     register_type: read
-    address: 220
+    address: 6169
     filters:
       - multiply: 0.01   
 
       
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "T8"
-    id: nilan_t8_temp_t8
+    name: "HeatPump Cold Side return T13"
+    id: nilan_heatpump_cold_side_return_t13
     unit_of_measurement: °C
     accuracy_decimals: 1
     device_class: temperature
     value_type: S_WORD
     register_type: read
-    address: 208
+    address: 6171
     filters:
       - multiply: 0.01   
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
-    name: "T9"
-    id: nilan_t9_temp_t9
+    name: "Heatpump Prespipe T35"
+    id: nilan_heatpump_prespipe_temp_t35
     unit_of_measurement: °C
     accuracy_decimals: 1
     device_class: temperature
     value_type: S_WORD
     register_type: read
-    address: 209
+    address: 6173
     filters:
       - multiply: 0.01 
       
-  - platform: modbus_controller
-    modbus_controller_id: nilan_modbus_controller
-    name: "T17"
-    id: nilan_t17_temp_t17
-    unit_of_measurement: °C
-    accuracy_decimals: 1
-    device_class: temperature
-    value_type: S_WORD
-    register_type: read
-    address: 217
-    filters:
-      - multiply: 0.01  
-
-  - platform: modbus_controller
-    modbus_controller_id: nilan_modbus_controller
-    name: "T18"
-    id: nilan_t18_temp_t18
-    unit_of_measurement: °C
-    accuracy_decimals: 1
-    device_class: temperature
-    value_type: S_WORD
-    register_type: read
-    address: 218
-    filters:
-      - multiply: 0.01       
-
-  - platform: modbus_controller
-    modbus_controller_id: nilan_modbus_controller
-    name: "T19"
-    id: nilan_t19_temp_t19
-    unit_of_measurement: °C
-    accuracy_decimals: 1
-    device_class: temperature
-    value_type: S_WORD
-    register_type: read
-    address: 219
-    filters:
-      - multiply: 0.01           
   
-# NOT WORKING ON COMFORT MODEL
-#  - platform: modbus_controller
-#    modbus_controller_id: nilan_modbus_controller
-#    name: "Actual inlet fan step"
-#    id: nilan_actual_inlet_fan_step
-#    unit_of_measurement: 'days'
-#    accuracy_decimals: 0
-#    register_type: read
-#    address: 1101
 
-# NOT WORKING ON COMFORT MODEL
-#  - platform: modbus_controller
-#    modbus_controller_id: nilan_modbus_controller
-#    name: "Actual exhaust fan step"
-#    id: nilan_actual_exhaust_fan_step
-#    unit_of_measurement: 'days'
-#    accuracy_decimals: 0
-#    register_type: read
-#    address: 1102
-      
-###########################
-#### HOLDING REGISTERS ####
-###########################
 
 binary_sensor:
 #########################
@@ -366,7 +306,7 @@ binary_sensor:
     name: "Compressor 2"
     id: nilan_compressor_2
     register_type: holding
-    address: 110 
+    address: 1920 
     
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
