--- a/components/nilan/air9.yaml
+++ b/components/nilan/air9.yaml
@@ -329,7 +329,120 @@ binary_sensor:
     register_type: holding
     address: 122   
 
+number:
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Heatpump Hotwater set"
+    id: nilan_heatpump_hotwater_set
+    min_value: 5.0
+    max_value: 70.0
+    step: 1.0
+    address: 1822
+    force_new_range: true
+    use_write_multiple: true
   
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "heatpump Hotwater Neutral Zone"
+    id: nilan_heatpump_hotater_neutral_zone_set
+    min_value: 0.1
+    max_value: 15.0
+    step: 0.1
+    address: 1823
+    force_new_range: true
+    use_write_multiple: true
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Heatpump Heating Neutral Zone"
+    id: nilan_heatpump_heating_neutral_zone_set
+    min_value: 0.1
+    max_value: 15.0
+    step: 0.1
+    address: 1833
+    force_new_range: true
+    use_write_multiple: true
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Heatpump Stop Temp"
+    id: nilan_heatpump_stop_temp_set
+    min_value: 30.0
+    max_value: 70.0
+    step: 1.0
+    address: 6537
+    force_new_range: true
+    use_write_multiple: true
+    
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Heatpump Outdoor temp stop"
+    id: nilan_heatpump_outdoor_temp_stop_set
+    min_value: -45.0
+    max_value:  10.0
+    step: 1.0
+    address: 6538
+    force_new_range: true
+    use_write_multiple: true 
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Heatpump Total Stop Temp"
+    id: nilan_heatpump_total_stop_temp_set    
+    min_value: 30.0
+    max_value: 90.0
+    step: 1.0
+    address: 6539
+    force_new_range: true
+    use_write_multiple: true
+    
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Heatpump Cool Setpoint Min"
+    id: nilan_heatpump_cool_setpoint_min
+    min_value: 5.0
+    max_value: 50.0
+    step: 1.0
+    address: 6561
+    force_new_range: true
+    use_write_multiple: true
+    
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Heatpump Heating Setpoint Min"
+    id: nilan_heatpump_Heating_setpoint_min
+    min_value: 0.0
+    max_value: 70.0
+    step: 1.0
+    address: 6562
+    force_new_range: true
+    use_write_multiple: true
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Heatpump Heating Setpoint Max"
+    id: nilan_heatpump_heating_setpoint_max
+    min_value: 0.0
+    max_value: 70.0
+    step: 1.0
+    address: 6564
+    force_new_range: true
+    use_write_multiple: true
+    
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Heatpump Evaporator Min"
+    id: nilan_heatpump_evaporator_min_temp
+    min_value: -45.0
+    max_value: -5.0
+    step: 1.0
+    address: 6564
+    force_new_range: true
+    use_write_multiple: true
+
 
 text_sensor:
 
