--- a/components/nilan/basic.yaml
+++ b/components/nilan/basic.yaml
@@ -36,6 +36,34 @@ select:
       "Cool" : 2
       "Auto" : 3
 
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Heatpump Heating Source"
+    id: nilan_set_heatpump_source
+    address: 1830
+    force_new_range: true
+    use_write_multiple: true
+    value_type: U_WORD
+    optionsmap:
+      "None" : 0
+      "HeatPump" : 1
+      "Eletrical" : 2
+      "HeatPump+Eletrical" : 3   
+
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Heatpump Heating Ctrl Mode"
+    id: nilan_set_heatpump_crl_mode
+    address: 1831
+    force_new_range: true
+    use_write_multiple: true
+    value_type: U_WORD
+    optionsmap:
+      "OnOff-Tret" : 0
+      "Modulating- tsup" : 1
+      "OnOff-Twatertank" : 2
+      "Modulating-Twatertank" : 3       
+
 sensor:
 #########################
 #### INPUT REGISTERS ####
