--- a/components/nilan/air9.yaml
+++ b/components/nilan/air9.yaml
@@ -340,6 +340,7 @@ number:
     address: 1822
     force_new_range: true
     use_write_multiple: true
+    multiply: 10
   
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
@@ -351,6 +352,7 @@ number:
     address: 1823
     force_new_range: true
     use_write_multiple: true
+    multiply: 10
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
@@ -362,6 +364,7 @@ number:
     address: 1833
     force_new_range: true
     use_write_multiple: true
+    multiply: 10
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
@@ -373,17 +376,19 @@ number:
     address: 6537
     force_new_range: true
     use_write_multiple: true
+    multiply: 10
     
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
     name: "Heatpump Outdoor temp stop"
     id: nilan_heatpump_outdoor_temp_stop_set
-    min_value: -45.0
-    max_value:  10.0
+    min_value: 45.0
+    max_value: 10.0
     step: 1.0
     address: 6538
     force_new_range: true
-    use_write_multiple: true 
+    use_write_multiple: true
+    multiply: 10
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
@@ -395,6 +400,7 @@ number:
     address: 6539
     force_new_range: true
     use_write_multiple: true
+    multiply: 10
     
 
   - platform: modbus_controller
@@ -407,6 +413,7 @@ number:
     address: 6561
     force_new_range: true
     use_write_multiple: true
+    multiply: 10
     
 
   - platform: modbus_controller
@@ -419,6 +426,7 @@ number:
     address: 6562
     force_new_range: true
     use_write_multiple: true
+    multiply: 10
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
@@ -430,18 +438,20 @@ number:
     address: 6564
     force_new_range: true
     use_write_multiple: true
+    multiply: 10
     
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
     name: "Heatpump Evaporator Min"
     id: nilan_heatpump_evaporator_min_temp
-    min_value: -45.0
-    max_value: -5.0
+    min_value: 45.0
+    max_value: 5.0
     step: 1.0
     address: 6564
     force_new_range: true
     use_write_multiple: true
+    multiply: 10
 
 
 text_sensor:
