--- a/components/nilan/air9.yaml
+++ b/components/nilan/air9.yaml
@@ -388,7 +388,8 @@ number:
     address: 6538
     force_new_range: true
     use_write_multiple: true
-    multiply: 10
+    lambda: "return (x-65536)/10;"
+    write_lambda: "return (x+65536)*10;"
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
