--- a/components/nilan/cts400.yaml
+++ b/components/nilan/cts400.yaml
@@ -244,6 +244,28 @@ number:
     step: 1.0
     address: 37
     multiply: 10
+    
+  - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Timeout high level humidity"
+    id: nilan_timeout_high_level_humidity_set
+    min_value: 0
+    max_value: 180
+    step: 1.0
+    address: 34
+    multiply: 10
+
+    - platform: modbus_controller
+    modbus_controller_id: nilan_modbus_controller
+    name: "Days between filter change"
+    id: nilan_days_between_filter_change_set
+    min_value: 0
+    max_value: 360
+    step: 1.0
+    address: 50
+    multiply: 10
+    
+    
 
   - platform: modbus_controller
     modbus_controller_id: nilan_modbus_controller
